# magma

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  psql-swarm.yml  refernce-latest.sql
base-service/: Cargo.toml
employee-service/: Cargo.toml
humans-service/: Cargo.toml
humans-service/src/: main.rs
humans-service/src/gql/: mod.rs  service.rs
internals-service/: Cargo.toml
inventory-service/: Cargo.toml
inventory-service/migrations/: 20220119020956_inventory.sql  20220124023850_version-1.0-inventory-schema.sql
inventory-service/src/: main.rs
inventory-service/src/entity/: mod.rs  orders.rs  prelude.rs  products.rs
inventory-service/src/entitys/: mod.rs  prelude.rs  products.rs
inventory-service/src/gql/: service.rs
inventory-service/src/models/: product.rs
migrations/: 20220124043951_psql-schema-version-1.0.sql
