[package]
name = "inventory-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.10.3"
async-graphql-warp = "2.10.3"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3"