[package]
name = "inventory-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.10.3"
async-graphql-warp = "2.10.3"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"